--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=demo
-server.port=8081
+server.port=8080
+
+mysql.username=root
+mysql.password=85864546l
+mysql.url=jdbc:mysql://localhost:3306/backenddemo?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
