--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=demo
 server.port=16382
+server.ssl.key-store=classpath:rache.jks
+server.ssl.key-alias=DemoKey
+server.ssl.key-store-password=qwertyuiop
 
 mysql.username=rache
 mysql.password=qwertyuiop
