--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=demo
-server.port=16382
+server.port=8080
 server.ssl.key-store=classpath:rache.jks
 server.ssl.key-alias=DemoKey
 server.ssl.key-store-password=qwertyuiop
 
-mysql.username=rache
-mysql.password=qwertyuiop
-mysql.url=jdbc:mysql://localhost:16383/rache_backenddemo?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+mysql.username=root
+mysql.password=
+mysql.url=jdbc:mysql://localhost:3306/backend_demo?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
