fixed submit failure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ server.ssl.key-alias=DemoKey
 server.ssl.key-store-password=qwertyuiop
 
 mysql.username=root
-mysql.password=
-mysql.url=jdbc:mysql://localhost:3306/backend_demo?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+mysql.password=85864546l
+mysql.url=jdbc:mysql://localhost:3306/backenddemo?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
